<resources>
    <string name="app_name">RaiaChat</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="degree_celsius">\u00b0 C</string>
    <string name="image_default_content_description">image default description</string>
    <string name="change_photo">Change Photo</string>
    <string name="fullname">Name</string>
    <string name="phone">Phone</string>
    <string name="location">Location</string>
    <string name="connected_accounts">Connected Accounts</string>
    <string name="no_notification">You don\'t have notification</string>
    <string name="dismiss">Dismiss</string>

    <string name="help_site_url">http://jobgetabu.me</string>


    <!-- Date Util -->
    <string name="date_util_term_less">less than</string>
    <string name="date_util_term_a">a</string>
    <string name="date_util_term_an">an</string>

    <string name="date_util_unit_second">second</string>
    <string name="date_util_unit_seconds">seconds</string>
    <string name="date_util_unit_minute">minute</string>
    <string name="date_util_unit_minutes">minutes</string>
    <string name="date_util_unit_hour">hour</string>
    <string name="date_util_unit_hours">hours</string>
    <string name="date_util_unit_day">day</string>
    <string name="date_util_unit_days">days</string>
    <string name="date_util_unit_month">month</string>
    <string name="date_util_unit_months">months</string>
    <string name="date_util_unit_year">year</string>
    <string name="date_util_unit_years">years</string>

    <string name="date_util_prefix_lt">less than a</string>
    <string name="date_util_prefix_about">about</string>
    <string name="date_util_prefix_over">over</string>
    <string name="date_util_prefix_almost">almost</string>

    <string name="date_util_suffix">ago</string>
    <string name="login">Login</string>
    <string name="phone_number">Phone Number</string>
    <string name="code">Code</string>
    <string name="social_login">Social Login</string>
    <string name="resend_code">Resend Code</string>

    <string name="facebook_app_id">403019067173396</string>
    <string name="fb_login_protocol_scheme">fb403019067173396</string>


</resources>
