<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/llbgggg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/groupinfoedit_scrollViewconstraint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/groupinfoedit_profile_image"
                    android:layout_width="230dp"
                    android:layout_height="230dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/avatar_placeholder"
                    app:civ_border_color="@android:color/white"
                    app:civ_border_width="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/groupinfoedit_scrollViewconstraint"

                    />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/cimrrrr"
                    android:layout_width="230dp"
                    android:layout_height="230dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="8dp"
                    android:src="#330C756D"
                    android:visibility="visible"
                    app:civ_border_color="@android:color/white"
                    app:civ_border_width="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/groupinfoedit_scrollViewconstraint" />


                <ImageButton
                    android:id="@+id/groupinfoedit_btn_changeimg"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="64dp"
                    android:layout_marginEnd="8dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/image_default_content_description"
                    android:scaleType="fitCenter"
                    app:layout_constraintEnd_toEndOf="@+id/cimrrrr"
                    app:layout_constraintStart_toStartOf="@+id/cimrrrr"
                    app:layout_constraintTop_toTopOf="@+id/cimrrrr"
                    app:srcCompat="@drawable/ic_camera" />

                <TextView
                    android:id="@+id/groupinfoedit_tv_changeimg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/change_photo"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/cimrrrr"
                    app:layout_constraintEnd_toEndOf="@+id/cimrrrr"
                    app:layout_constraintStart_toStartOf="@+id/cimrrrr"
                    app:layout_constraintTop_toBottomOf="@+id/groupinfoedit_btn_changeimg"
                    app:layout_constraintVertical_bias="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/padding_normal"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:orientation="vertical"
                android:padding="16dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/groupinfoedit_groupdisname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_pencil"
                        android:drawableRight="@drawable/ic_pencil"
                        android:hint="@string/fullname"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:singleLine="true"
                        android:text="Job Mzito" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/groupinfoedit_groupfullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_normal">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_pencil"
                        android:drawableRight="@drawable/ic_pencil"
                        android:hint="@string/phone"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:singleLine="true"
                        android:text="0708440184" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/groupinfoedit_descrip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_normal">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_pencil"
                        android:drawableRight="@drawable/ic_pencil"
                        android:hint="@string/location"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:text="Nairobi,Thika E2" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/padding_normal"
                android:paddingLeft="@dimen/padding_normal"
                android:paddingTop="@dimen/padding_normal"
                android:paddingEnd="@dimen/d32"
                android:paddingRight="@dimen/d32"
                android:paddingBottom="@dimen/d32">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:paddingStart="@dimen/padding_normal"
                    android:paddingEnd="@dimen/padding_normal"
                    android:text="@string/connected_accounts"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.131"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/frg_details_fbicon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"

                    android:contentDescription="@string/image_default_content_description"
                    app:layout_constraintBottom_toTopOf="@+id/materialButton"
                    app:layout_constraintEnd_toStartOf="@+id/frg_details_googleicon"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/fb_icon" />

                <ImageView
                    android:id="@+id/frg_details_googleicon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/materialButton"
                    app:layout_constraintEnd_toStartOf="@+id/frg_details_emailicon"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/frg_details_fbicon"
                    app:layout_constraintTop_toBottomOf="@+id/textView7"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/ic_googleplus_icon" />

                <ImageView
                    android:id="@+id/frg_details_emailicon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="32dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/frg_details_googleicon"
                    app:layout_constraintTop_toBottomOf="@+id/textView7"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/gmail_icon" />

                <ImageView
                    android:id="@+id/frg_details_tick_fbicon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="28dp"
                    android:layout_marginLeft="28dp"
                    android:layout_marginTop="28dp"
                    android:visibility="visible"
                    app:layout_constraintStart_toStartOf="@+id/frg_details_fbicon"
                    app:layout_constraintTop_toTopOf="@+id/frg_details_fbicon"
                    app:srcCompat="@drawable/ic_approval" />

                <ImageView
                    android:id="@+id/frg_details_tick_googleicon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="28dp"
                    android:layout_marginLeft="28dp"
                    android:layout_marginTop="28dp"
                    android:visibility="visible"
                    app:layout_constraintStart_toStartOf="@+id/frg_details_googleicon"
                    app:layout_constraintTop_toTopOf="@+id/frg_details_googleicon"
                    app:srcCompat="@drawable/ic_approval" />

                <ImageView
                    android:id="@+id/frg_details_tick_emailicon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="28dp"
                    android:visibility="visible"
                    app:layout_constraintStart_toStartOf="@+id/frg_details_emailicon"
                    app:layout_constraintTop_toTopOf="@+id/frg_details_emailicon"
                    app:srcCompat="@drawable/ic_approval" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/materialButton"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="Update Profile"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/frg_details_emailicon" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>